--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="/assets/images/favicon.ico"
       type="image/x-icon"
-    />
+    /> -->
     <script defer src="/assets/js/app.js"></script>
     <link href="/assets/css/index.css" rel="stylesheet" />
 
